Updated the README file

--- a/style.css
+++ b/style.css
@@ -332,6 +332,7 @@ transition: cubic-bezier(0.165, 0.84, 0.44, 1);
     background-position: center;
             justify-content: center;
     padding: 20px;
+    margin-top: 30px;
 }
 /* .container4 img{
     width: 100%;
