--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ span{
     justify-content: space-between;
     align-items: center;
    margin-inline: auto;
-   position: absolute
-    text-align: center;
+      text-align: center;
 }
+ 
 .Desktop-Menu{
     height: 100%;
-    position:sticky;
- 
+    
+    
 }
 .Desktop-Menu ul{
     height: 100%;
@@ -58,6 +58,9 @@ span{
 header{
     background-color: #80858d;
     height: 72px;
+    position: sticky;
+    top:0;
+    z-index:1111;
 
 }
 button{
@@ -107,6 +110,7 @@ button:hover{
     display: flex;
     text-align: center;
     justify-content: center;
+position: relative;
 }
 .hero{
     display: flex;
